flux/k9s.io/infrastructure/services/prod/gitlab/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-webservice-default
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
spec:
  ingressClassName: nginx-external-noauth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-gitlab-pages
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
spec:
  ingressClassName: nginx-external-noauth
